Instructor Creation wrap up
Will continue on Instructor Update view and command;

--- a/SHS.StudentPortal/SHS.StudentPortal.Web/appsettings.Development.json
+++ b/SHS.StudentPortal/SHS.StudentPortal.Web/appsettings.Development.json
@@ -18,6 +18,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=127.0.0.1,14333;Initial Catalog=SHS_StudentPortal_Dev;User Id=sa;Password=p@ssw0rd;Connect Timeout=30;TrustServerCertificate=True;",
-    "RedisConnection": "localhost:6379,password=dentAppP@ssw0rd,abortConnect=false"
+    "RedisConnection": "localhost:6379,password=p@ssw0rd,abortConnect=false"
   }
 }
