--- a/SHS.StudentPortal/SHS.StudentPortal.App/SHS.StudentPortal.App.csproj
+++ b/SHS.StudentPortal/SHS.StudentPortal.App/SHS.StudentPortal.App.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
