Update gitignore to estore wwwroot and ability to add departments

--- a/.gitignore
+++ b/.gitignore
@@ -401,5 +401,4 @@ FodyWeavers.xsd
 /SHS.StudentPortal/DockerVolume
 
 # ASP.NET Core web app publish output
-wwwroot/
-!wwwroot/**/*.json
+**/wwwroot/lib/
