Move frontend to using blazor

--- a/SHS.StudentPortal/SHS.StudentPortal.Web/appsettings.Development.json
+++ b/SHS.StudentPortal/SHS.StudentPortal.Web/appsettings.Development.json
@@ -7,7 +7,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "/Projects/CNCHS SHS MIS/SHS.StudentPortal/Logs/Log-.txt",
+          "path": "/Projects/Local/CNCHS SHS MIS/SHS.StudentPortal/Logs/Log-.txt",
           "rollingInterval": "Day",
           "rollOnFileSizeLimit": true,
           "outputTemplate": "{Timestamp:o} [{Level}] ([{MachineName}][{ThreadId}]) {Message}{NewLine}{Exception}"
@@ -17,7 +17,8 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=127.0.0.1,14333;Initial Catalog=SHS_StudentPortal_Dev;User Id=sa;Password=p@ssw0rd;Connect Timeout=30;TrustServerCertificate=True;",
-    "RedisConnection": "localhost:6379,password=p@ssw0rd,abortConnect=false"
+    //"DefaultConnection": "Data Source=127.0.0.1,14333;Initial Catalog=SHS_StudentPortal_Dev;User Id=sa;Password=p@ssw0rd;Connect Timeout=30;TrustServerCertificate=True;",
+    "DefaultConnection": "Data Source=127.0.0.1,1433;Initial Catalog=SHS_StudentPortal_Dev;User Id=sa;Password=p@ssw0rd;Connect Timeout=30;TrustServerCertificate=True;",
+    //"RedisConnection": "localhost:6379,password=p@ssw0rd,abortConnect=false"
   }
 }
