--- a/SHS.StudentPortal/SHS.StudentPortal.App/SHS.StudentPortal.App.csproj
+++ b/SHS.StudentPortal/SHS.StudentPortal.App/SHS.StudentPortal.App.csproj
@@ -9,8 +9,11 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Radzen.Blazor" Version="6.2.4" />
   </ItemGroup>
 
   <ItemGroup>
