--- a/SHS.StudentPortal/SHS.StudentPortal.Common/SHS.StudentPortal.Common.csproj
+++ b/SHS.StudentPortal/SHS.StudentPortal.Common/SHS.StudentPortal.Common.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Radzen.Blazor" Version="6.2.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\AuthState\" />
+  </ItemGroup>
+
 </Project>
